--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,9 @@
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "strictBindCallApply": false,
-    "plugins": [{"transform": "ts-transformer-keys/transformer"}],
+    "plugins": [{ "transform": "ts-transformer-keys/transformer" }],
     // "esModuleInterop": true,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
