--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eccomerce-api",
+  "name": "starter-nestjs",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "NODE_ENV=development nest start --watch",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -34,6 +34,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
     "escape-string-regexp": "^5.0.0",
