--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
-DB_URL=
-DB_NAME=
-SERVER_PORT=
+DB_NAME=user-service
+DB_USERNAME=admin
+DB_PASSWORD=admin
+DB_HOST=localhost
+DB_PORT=27017
+
+JWT_SECRET_KEY=user
+JWT_EXPIRE_IN=60000
+
+SERVER_PORT=3000
+DOCKER_SERVER_PORT=3001
